--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,3 +8,13 @@
     @apply m-0 p-0 bg-gradient-to-r from-blue-100 to-green-200;
   }
 }
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
